@@ -1,3 +1,7 @@
+[B]2.3.0[/B]
+- Minor fix for video thumbnails
+- Performance optimizations
+
 [B]2.2.0[/B]
 - Updated youtube api key
 - Updated indexing functions
